Update filter view

--- a/packages/client/src/pages/FileDetailsPage.css
+++ b/packages/client/src/pages/FileDetailsPage.css
@@ -133,7 +133,7 @@
 .preview-header {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-end;
   margin-bottom: 1rem;
 }
 
