--- a/packages/client/src/pages/SearchResultsPage.css
+++ b/packages/client/src/pages/SearchResultsPage.css
@@ -372,4 +372,9 @@
 /* Filter View */
 .search-filter-view {
   margin-bottom: 1.5rem;
+  display: none;
+}
+
+.search-filter-view.visible {
+  display: block;
 }
